--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- update the version number as needed -->
 </head>
 <body>
   <app-root>
@@ -19,3 +20,4 @@
   </app-root>
 </body>
 </html>
+
